--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body, html {
 	padding: 0;
 }
 #page-container {
-    position: relative;
+    position: absolute;
     min-height: 100%;
 }
 #page_content {
