--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body, html {
 #page-container {
     position: absolute;
     min-height: 100%;
+    width: 100%
 }
 #page_content {
     margin: auto;
