--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ footer {
     bottom: 0;
     max-height: 5.5rem;
     position: absolute;
-    width: auto;
+    width: 100%;
 }
 p {
     color: rgba(0, 0, 0, 1);
